FIX: Positioning issues fixed, and sections overlap each other.

--- a/app/components/header/_header.scss
+++ b/app/components/header/_header.scss
@@ -76,7 +76,7 @@ body.homepage {
 
 .Mobile {
 	position: relative;
-	z-index: 3;
+	z-index: 15;
 
 	&-bar-branding {
 		font-size: 14px !important;
